force-app/main/default/objects/wkdw__EmployeeWorkExperienceLink__c/wkdw__EmployeeWorkExperienceLink__c.object-meta.xml
<CustomObject>
    <description>Represents a link associated with the work experience of an employee in the Employee Workspace community.</description>
    <label>Portfolio Item Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>