force-app/main/default/objects/wkdw__EmployeeWorkExperienceLink__c/fields/wkdw__Type__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Type__c</fullName>
    <description>The type of link.</description>
    <label>Link Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>