force-app/main/default/objects/wkdw__EmployeeWorkExperienceLink__c/fields/wkdw__URL__c.field-meta.xml
<CustomField>
    <fullName>wkdw__URL__c</fullName>
    <description>The URL for the portfolio item link.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>