force-app/main/default/objects/wkdw__EmployeeWorkExperienceLink__c/fields/wkdw__WorkExperience__c.field-meta.xml
<CustomField>
    <fullName>wkdw__WorkExperience__c</fullName>
    <description>The portfolio item associated with this portfolio item link.</description>
    <label>Portfolio Item</label>
    <referenceTo>wkdw__EmployeeWorkExperience__c</referenceTo>
    <relationshipLabel>Portfolio Item Links</relationshipLabel>
    <relationshipName>Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>